src/objects/vlocity_ins__UiSection__c.object
<CustomObject>
    <description>Represents a reusable section label used in object layouts.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this UI Section. Used to identify the UI Section across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique UI Section identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity UI Section</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Section Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity UI Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>